--- a/src/css/atom/_hr.scss
+++ b/src/css/atom/_hr.scss
@@ -2,7 +2,7 @@
 ––––
 
 	title:
-		Separators
+		Hr
 
 	comment:
 		La hr est une plante qui se mange froide
@@ -19,6 +19,8 @@
 		<hr data-title="another title" />
 		<hr class="-title-left" data-title="yet another title" />
 		<hr class="-title-right" data-title="title right" />
+		<div class="hr"><span><i class="icon -heart"></i></span></div>
+
 ––––
 */
 
