--- a/src/css/atom/_label.scss
+++ b/src/css/atom/_label.scss
@@ -9,8 +9,14 @@
 
 	markup:
     <label>Simple</label>
-		<label><i class="icon -sun"></i>With icon</label>
-    <label class="-step"><span>1</span>With -step</label>
+    <label>
+      <i class="icon -sun"></i>
+      With icon
+    </label>
+    <label class="-step">
+      <span>1</span>
+      With -step
+    </label>
 
 ––––
 */
