--- a/src/css/helper/_core.scss
+++ b/src/css/helper/_core.scss
@@ -1,12 +1,12 @@
 @import "const/ratio";
-@import "const/easing";
+@import "const/ease";
+
 @import "const/icon";
 @import "const/normalize";
 @import "const/extra-normalize";
 @import "const/flag";
 @import "const/social";
 
-@import "tool/filters/core";
 @import "tool/math/math";
 
 @import "tool/highlight";
