--- a/src/css/helper/const/_icon.scss
+++ b/src/css/helper/const/_icon.scss
@@ -1,529 +1,529 @@
 
-.-temple:before {
+.icon.-temple:before {
   content: "\e9ad";
 }
-.-beer:before {
+.icon.-beer:before {
   content: "\e9ab";
 }
-.-euro:before {
+.icon.-euro:before {
   content: "\e9ac";
 }
-.-paperplane:before {
+.icon.-paperplane:before {
   content: "\e900";
 }
-.-big-user:before {
+.icon.-big-user:before {
   content: "\e9ae";
 }
-.-text-bubble:before {
+.icon.-text-bubble:before {
   content: "\e9af";
 }
-.-wheelchair:before {
+.icon.-wheelchair:before {
   content: "\e901";
 }
-.-warning:before {
+.icon.-warning:before {
   content: "\e902";
 }
-.-volume-medium:before {
+.icon.-volume-medium:before {
   content: "\e903";
 }
-.-volume-low:before {
+.icon.-volume-low:before {
   content: "\e904";
 }
-.-volume-high:before {
+.icon.-volume-high:before {
   content: "\e905";
 }
-.-volume:before {
+.icon.-volume:before {
   content: "\e906";
 }
-.-users:before {
+.icon.-users:before {
   content: "\e907";
 }
-.-user:before {
+.icon.-user:before {
   content: "\e908";
 }
-.-upload:before {
+.icon.-upload:before {
   content: "\e909";
 }
-.-unlink:before {
+.icon.-unlink:before {
   content: "\e90a";
 }
-.-undo:before {
+.icon.-undo:before {
   content: "\e90b";
 }
-.-underline:before {
+.icon.-underline:before {
   content: "\e90c";
 }
-.-trash:before {
+.icon.-trash:before {
   content: "\e90d";
 }
-.-train:before {
+.icon.-train:before {
   content: "\e90e";
 }
-.-thumbs-up:before {
+.icon.-thumbs-up:before {
   content: "\e90f";
 }
-.-thumbs-down:before {
+.icon.-thumbs-down:before {
   content: "\e910";
 }
-.-text-size:before {
+.icon.-text-size:before {
   content: "\e911";
 }
-.-text-format-remove:before {
+.icon.-text-format-remove:before {
   content: "\e912";
 }
-.-text-format:before {
+.icon.-text-format:before {
   content: "\e913";
 }
-.-text-align-right:before {
+.icon.-text-align-right:before {
   content: "\e914";
 }
-.-text-align-left:before {
+.icon.-text-align-left:before {
   content: "\e915";
 }
-.-text-align-justify:before {
+.icon.-text-align-justify:before {
   content: "\e916";
 }
-.-text-align-center:before {
+.icon.-text-align-center:before {
   content: "\e917";
 }
-.-tag:before {
+.icon.-tag:before {
   content: "\e918";
 }
-.-tablet:before {
+.icon.-tablet:before {
   content: "\e919";
 }
-.-sync:before {
+.icon.-sync:before {
   content: "\e91a";
 }
-.-sun:before {
+.icon.-sun:before {
   content: "\e91b";
 }
-.-strikethrough:before {
+.icon.-strikethrough:before {
   content: "\e91c";
 }
-.-store:before {
+.icon.-store:before {
   content: "\e91d";
 }
-.-star-half:before {
+.icon.-star-half:before {
   content: "\e91e";
 }
-.-star-empty:before {
+.icon.-star-empty:before {
   content: "\e91f";
 }
-.-star:before {
+.icon.-star:before {
   content: "\e920";
 }
-.-spell-check:before {
+.icon.-spell-check:before {
   content: "\e921";
 }
-.-sort-amount-asc:before {
+.icon.-sort-amount-asc:before {
   content: "\e922";
 }
-.-sort-alpha-asc:before {
+.icon.-sort-alpha-asc:before {
   content: "\e923";
 }
-.-smile:before {
+.icon.-smile:before {
   content: "\e924";
 }
-.-smartphone:before {
+.icon.-smartphone:before {
   content: "\e925";
 }
-.-shirt:before {
+.icon.-shirt:before {
   content: "\e926";
 }
-.-select:before {
+.icon.-select:before {
   content: "\e927";
 }
-.-screen:before {
+.icon.-screen:before {
   content: "\e928";
 }
-.-sad:before {
+.icon.-sad:before {
   content: "\e929";
 }
-.-rocket:before {
+.icon.-rocket:before {
   content: "\e92a";
 }
-.-redo:before {
+.icon.-redo:before {
   content: "\e92b";
 }
-.-question-circle:before {
+.icon.-question-circle:before {
   content: "\e92c";
 }
-.-pushpin:before {
+.icon.-pushpin:before {
   content: "\e92d";
 }
-.-printer:before {
+.icon.-printer:before {
   content: "\e92e";
 }
-.-power-switch:before {
+.icon.-power-switch:before {
   content: "\e92f";
 }
-.-poop:before {
+.icon.-poop:before {
   content: "\e930";
 }
-.-pointer-up:before {
+.icon.-pointer-up:before {
   content: "\e931";
 }
-.-pointer-right:before {
+.icon.-pointer-right:before {
   content: "\e932";
 }
-.-pointer-left:before {
+.icon.-pointer-left:before {
   content: "\e933";
 }
-.-pointer-down:before {
+.icon.-pointer-down:before {
   content: "\e934";
 }
-.-plus-circle:before {
+.icon.-plus-circle:before {
   content: "\e935";
 }
-.-pilcrow:before {
+.icon.-pilcrow:before {
   content: "\e936";
 }
-.-pie-chart:before {
+.icon.-pie-chart:before {
   content: "\e937";
 }
-.-picture:before {
+.icon.-picture:before {
   content: "\e938";
 }
-.-phone-handset:before {
+.icon.-phone-handset:before {
   content: "\e939";
 }
-.-phone:before {
+.icon.-phone:before {
   content: "\e93a";
 }
-.-pencil:before {
+.icon.-pencil:before {
   content: "\e93b";
 }
-.-paw:before {
+.icon.-paw:before {
   content: "\e93c";
 }
-.-paperclip:before {
+.icon.-paperclip:before {
   content: "\e93d";
 }
-.-page-break:before {
+.icon.-page-break:before {
   content: "\e93e";
 }
-.-neutral:before {
+.icon.-neutral:before {
   content: "\e93f";
 }
-.-mustache:before {
+.icon.-mustache:before {
   content: "\e940";
 }
-.-music-note:before {
+.icon.-music-note:before {
   content: "\e941";
 }
-.-move:before {
+.icon.-move:before {
   content: "\e942";
 }
-.-moon:before {
+.icon.-moon:before {
   content: "\e943";
 }
-.-mic:before {
+.icon.-mic:before {
   content: "\e944";
 }
-.-menu-circle:before {
+.icon.-menu-circle:before {
   content: "\e945";
 }
-.-menu:before {
+.icon.-menu:before {
   content: "\e946";
 }
-.-map-marker:before {
+.icon.-map-marker:before {
   content: "\e947";
 }
-.-map:before {
+.icon.-map:before {
   content: "\e948";
 }
-.-magnifier:before {
+.icon.-magnifier:before {
   content: "\e949";
 }
-.-magic-wand:before {
+.icon.-magic-wand:before {
   content: "\e94a";
 }
-.-lock:before {
+.icon.-lock:before {
   content: "\e94b";
 }
-.-location:before {
+.icon.-location:before {
   content: "\e94c";
 }
-.-list:before {
+.icon.-list:before {
   content: "\e94d";
 }
-.-link:before {
+.icon.-link:before {
   content: "\e94e";
 }
-.-line-spacing:before {
+.icon.-line-spacing:before {
   content: "\e94f";
 }
-.-linearicons:before {
+.icon.-linearicons:before {
   content: "\e950";
 }
-.-lighter:before {
+.icon.-lighter:before {
   content: "\e951";
 }
-.-license:before {
+.icon.-license:before {
   content: "\e952";
 }
-.-leaf:before {
+.icon.-leaf:before {
   content: "\e953";
 }
-.-layers:before {
+.icon.-layers:before {
   content: "\e954";
 }
-.-laptop-phone:before {
+.icon.-laptop-phone:before {
   content: "\e955";
 }
-.-laptop:before {
+.icon.-laptop:before {
   content: "\e956";
 }
-.-keyboard:before {
+.icon.-keyboard:before {
   content: "\e957";
 }
-.-italic:before {
+.icon.-italic:before {
   content: "\e958";
 }
-.-indent-increase:before {
+.icon.-indent-increase:before {
   content: "\e959";
 }
-.-indent-decrease:before {
+.icon.-indent-decrease:before {
   content: "\e95a";
 }
-.-inbox:before {
+.icon.-inbox:before {
   content: "\e95b";
 }
-.-hourglass:before {
+.icon.-hourglass:before {
   content: "\e95c";
 }
-.-home:before {
+.icon.-home:before {
   content: "\e95d";
 }
-.-history:before {
+.icon.-history:before {
   content: "\e95e";
 }
-.-highlight:before {
+.icon.-highlight:before {
   content: "\e95f";
 }
-.-heart-pulse:before {
+.icon.-heart-pulse:before {
   content: "\e960";
 }
-.-heart:before {
+.icon.-heart:before {
   content: "\e961";
 }
-.-hand:before {
+.icon.-hand:before {
   content: "\e962";
 }
-.-graduation-hat:before {
+.icon.-graduation-hat:before {
   content: "\e963";
 }
-.-gift:before {
+.icon.-gift:before {
   content: "\e964";
 }
-.-funnel:before {
+.icon.-funnel:before {
   content: "\e965";
 }
-.-frame-expand:before {
+.icon.-frame-expand:before {
   content: "\e966";
 }
-.-frame-contract:before {
+.icon.-frame-contract:before {
   content: "\e967";
 }
-.-flag:before {
+.icon.-flag:before {
   content: "\e968";
 }
-.-film-play:before {
+.icon.-film-play:before {
   content: "\e969";
 }
-.-file-empty:before {
+.icon.-file-empty:before {
   content: "\e96a";
 }
-.-file-add:before {
+.icon.-file-add:before {
   content: "\e96b";
 }
-.-eye:before {
+.icon.-eye:before {
   content: "\e96c";
 }
-.-exit-up:before {
+.icon.-exit-up:before {
   content: "\e96d";
 }
-.-exit:before {
+.icon.-exit:before {
   content: "\e96e";
 }
-.-envelope:before {
+.icon.-envelope:before {
   content: "\e96f";
 }
-.-enter-down:before {
+.icon.-enter-down:before {
   content: "\e970";
 }
-.-enter:before {
+.icon.-enter:before {
   content: "\e971";
 }
-.-earth:before {
+.icon.-earth:before {
   content: "\e972";
 }
-.-drop:before {
+.icon.-drop:before {
   content: "\e973";
 }
-.-download:before {
+.icon.-download:before {
   content: "\e974";
 }
-.-direction-rtl:before {
+.icon.-direction-rtl:before {
   content: "\e975";
 }
-.-direction-ltr:before {
+.icon.-direction-ltr:before {
   content: "\e976";
 }
-.-dinner:before {
+.icon.-dinner:before {
   content: "\e977";
 }
-.-dice:before {
+.icon.-dice:before {
   content: "\e978";
 }
-.-diamond:before {
+.icon.-diamond:before {
   content: "\e979";
 }
-.-database:before {
+.icon.-database:before {
   content: "\e97a";
 }
-.-cross-circle:before {
+.icon.-cross-circle:before {
   content: "\e97b";
 }
-.-cross:before {
+.icon.-cross:before {
   content: "\e97c";
 }
-.-crop:before {
+.icon.-crop:before {
   content: "\e97d";
 }
-.-construction:before {
+.icon.-construction:before {
   content: "\e97e";
 }
-.-cog:before {
+.icon.-cog:before {
   content: "\e97f";
 }
-.-coffee-cup:before {
+.icon.-coffee-cup:before {
   content: "\e980";
 }
-.-code:before {
+.icon.-code:before {
   content: "\e981";
 }
-.-cloud-upload:before {
+.icon.-cloud-upload:before {
   content: "\e982";
 }
-.-cloud-sync:before {
+.icon.-cloud-sync:before {
   content: "\e983";
 }
-.-cloud-download:before {
+.icon.-cloud-download:before {
   content: "\e984";
 }
-.-cloud-check:before {
+.icon.-cloud-check:before {
   content: "\e985";
 }
-.-cloud:before {
+.icon.-cloud:before {
   content: "\e986";
 }
-.-clock:before {
+.icon.-clock:before {
   content: "\e987";
 }
-.-circle-minus:before {
+.icon.-circle-minus:before {
   content: "\e988";
 }
-.-chevron-up-circle:before {
+.icon.-chevron-up-circle:before {
   content: "\e989";
 }
-.-chevron-up:before {
+.icon.-chevron-up:before {
   content: "\e98a";
 }
-.-chevron-right-circle:before {
+.icon.-chevron-right-circle:before {
   content: "\e98b";
 }
-.-chevron-right:before {
+.icon.-chevron-right:before {
   content: "\e98c";
 }
-.-chevron-left-circle:before {
+.icon.-chevron-left-circle:before {
   content: "\e98d";
 }
-.-chevron-left:before {
+.icon.-chevron-left:before {
   content: "\e98e";
 }
-.-chevron-down-circle:before {
+.icon.-chevron-down-circle:before {
   content: "\e98f";
 }
-.-chevron-down:before {
+.icon.-chevron-down:before {
   content: "\e990";
 }
-.-checkmark-circle:before {
+.icon.-checkmark-circle:before {
   content: "\e991";
 }
-.-chart-bars:before {
+.icon.-chart-bars:before {
   content: "\e992";
 }
-.-cart:before {
+.icon.-cart:before {
   content: "\e993";
 }
-.-car:before {
+.icon.-car:before {
   content: "\e994";
 }
-.-camera-video:before {
+.icon.-camera-video:before {
   content: "\e995";
 }
-.-camera:before {
+.icon.-camera:before {
   content: "\e996";
 }
-.-calendar-full:before {
+.icon.-calendar-full:before {
   content: "\e997";
 }
-.-bus:before {
+.icon.-bus:before {
   content: "\e998";
 }
-.-bullhorn:before {
+.icon.-bullhorn:before {
   content: "\e999";
 }
-.-bug:before {
+.icon.-bug:before {
   content: "\e99a";
 }
-.-bubble:before {
+.icon.-bubble:before {
   content: "\e99b";
 }
-.-briefcase:before {
+.icon.-briefcase:before {
   content: "\e99c";
 }
-.-bookmark:before {
+.icon.-bookmark:before {
   content: "\e99d";
 }
-.-book:before {
+.icon.-book:before {
   content: "\e99e";
 }
-.-bold:before {
+.icon.-bold:before {
   content: "\e99f";
 }
-.-bicycle:before {
+.icon.-bicycle:before {
   content: "\e9a0";
 }
-.-arrow-up-circle:before {
+.icon.-arrow-up-circle:before {
   content: "\e9a1";
 }
-.-arrow-up:before {
+.icon.-arrow-up:before {
   content: "\e9a2";
 }
-.-arrow-right-circle:before {
+.icon.-arrow-right-circle:before {
   content: "\e9a3";
 }
-.-arrow-right:before {
+.icon.-arrow-right:before {
   content: "\e9a4";
 }
-.-arrow-left-circle:before {
+.icon.-arrow-left-circle:before {
   content: "\e9a5";
 }
-.-arrow-left:before {
+.icon.-arrow-left:before {
   content: "\e9a6";
 }
-.-arrow-down-circle:before {
+.icon.-arrow-down-circle:before {
   content: "\e9a7";
 }
-.-arrow-down:before {
+.icon.-arrow-down:before {
   content: "\e9a8";
 }
-.-apartment:before {
+.icon.-apartment:before {
   content: "\e9a9";
 }
-.-alarm:before {
+.icon.-alarm:before {
   content: "\e9aa";
 }
