--- a/src/css/atom/_button.scss
+++ b/src/css/atom/_button.scss
@@ -9,49 +9,42 @@
 
 	markup:
     <label>Simple</label>
+    <button class="button -primary touch">
+      <span>Bouton</span>
+    </button>
     <button class="button touch">
       <span>Bouton</span>
     </button>
-    <button class="button -primary touch">
+    <button class="button touch">
+      <i class="icon -sun"></i>
       <span>Bouton</span>
     </button>
-		<button class="button touch">
-			<i class="icon -sun"></i>
-			<span>Bouton</span>
-		</button>
-    <button class="button -primary touch">
+    <button class="button touch">
       <span>Bouton</span>
       <i class="icon -arrow-right"></i>
     </button>
     <label>With -round</label>
-    <button class="button touch -round -line-danger">
-			<i class="icon -sun"></i>
+    <button class="button touch -round">
+      <i class="icon -sun"></i>
       <span>Button</span>
-		</button>
+    </button>
     <label>With -disabled</label>
-    <input type="submit" value="button" disabled class="button -primary"/>
-    <a class="button -danger -disabled -round -icon-only">
+    <input type="submit" value="button" disabled class="button"/>
+    <a class="button -disabled -round">
       <i class="icon -sun"></i>
     </a>
-
+		<a class="button -disabled">
+      <i class="icon -sun"></i>
+    </a>
 
 ––––
 */
 
-@keyframes button-spin {
-  0% {
-    transform: rotate(0deg);
-  }
-
-  100% {
-    transform: rotate(359deg);
-  }
-}
-
 .button {
 	display: inline-block;
 	position: relative;
-	padding: 7px 17px;
+  //padding:0;
+	padding: 7px 7px;
   height: 38px;
 	min-width: 38px;
 	text-decoration: none;
@@ -59,9 +52,7 @@
 	color: color("grey", "darken-4");
 	margin-right: $text-size;
 	margin-bottom: $text-size;
-	background-color:transparent;
-	text-transform: uppercase;
-	text-decoration: none;
+	background-color: transparent;
 	white-space: nowrap;
 	transition: all 200ms ease-in-out;
 	letter-spacing: 0.1rem;
@@ -69,7 +60,7 @@
   border-radius: 3px;
   user-select: none;
   font-family: $nav-font;
-	box-shadow: 0px 1px 1px -1px #8C9DA1;
+	//box-shadow: 0px 1px 1px -1px #8C9DA1;
   overflow: hidden;
   vertical-align: top;
 	&:hover {
@@ -85,12 +76,14 @@
 
 	i + span {
 		display: inline-block;
-		margin-left: 7px;
+    margin-left: 7px;
+		margin-right: 4px;
 	}
 
 	span + i {
 		display: inline-block;
-		margin-left: 7px;
+    margin-left: 7px;
+		margin-right: 4px;
 	}
 
 }
@@ -124,38 +117,16 @@
 
 .button {
 
-  &.-small {
-	   padding: 5px 10px;
-  }
-
-  &.-big {
-    padding: 15px 35px;
-  }
-
-	&.-icon-only {
-		padding: 10px;
-	}
-
-	&.-small.-only-icon {
-		padding: 0px;
-		i {
-			padding: 5px;
-			display: block;
-		}
-	}
-
   &.-round {
 		border-radius: 1000px;
 	}
 
-  &.-full {
-	width: 100%;
+  &.-square {
+    border-radius:0;
   }
 
-  &.-no-border {
-  	border: none!important;
-  	box-shadow: none;
-  	text-shadow: none;
+  &.-full {
+	width: 100%;
   }
 
 	@each $color_name, $color in $colors {
@@ -210,13 +181,13 @@
 		opacity: .15;
   }
 
+  &.-no-border {
+  	border: none!important;
+  	box-shadow: none;
+  	text-shadow: none;
+  }
+
   &.-no-gradient {
     background-image: none;
   }
-
-	&.loading {
-		span, i {
-			visibility: hidden;
-		}
-	}
 }
