--- a/src/css/atom/_radio.scss
+++ b/src/css/atom/_radio.scss
@@ -8,30 +8,32 @@
 		La Radio est une plante qui se mange froide
 
 	markup:
-	<label>Simple</label>
-	<div class="radio">
-		<input id="radio1" type="radio" name='radio-group' />
-		<label for="radio1">Apples</label>
-	</div>
-	<label>Checked</label>
-	<div class="radio">
-		<input id="radio2" type="radio" name='radio-group' checked='checked' />
-		<label for="radio2">Lemons</label>
-	</div>
-	<label>Disabled</label>
-	<div class="radio">
-		<input id="radio3" type="radio" name='radio-group' disabled="disabled"/>
-		<label for="radio3">Tomatoes</label>
-	</div>
+		<label>Simple</label>
+		<div class="radio -primary">
+			<input id="radio1" type="radio" name='radio-group' />
+			<label for="radio1">Apples</label>
+		</div>
+		<label>Checked</label>
+		<div class="radio">
+			<input id="radio2" type="radio" name='radio-group' checked='' />
+			<label for="radio2">Lemons</label>
+		</div>
+		<label>Disabled</label>
+		<div class="radio">
+			<input id="radio3" type="radio" name='radio-group' disabled="disabled"/>
+			<label for="radio3">Tomatoes</label>
+		</div>
 
 ––––
 */
 
+
+
 .radio {
 	@extend .unselectable;
 	cursor:pointer;
-	//margin-top:$text-size;
 	display:inline-block;
+	margin-bottom: $text-size / 2;
 	input {
 		display:none;
 	}
@@ -44,7 +46,8 @@
 		display:inline-block;
 		position: relative;
 		padding-left:30px;
-		margin-right:10px;
+		padding-right:10px;
+		margin-bottom:0;
 		line-height: 21px;
 		@extend .unselectable;
 		&:before,
@@ -59,46 +62,36 @@
 			text-align:center;
 			position: absolute;
 			transition: all .3s ease-in-out;
+			border-radius: 100%;
 		}
 		&:before{
 			background-color: white;
-			border: 1px solid color("primary","darken-1");
+			border: 1px solid color("grey","lighten-2");
 			transition: all .3s ease-in-out;
+			box-shadow: 1px 1px 1px #efefef inset;
 		}
 		&:after{
-			color:#fff;
 			width: 8px;
 			height: 8px;
-			transform:translateX(6px) translateY(6px);
+			transform:translateX(6px) translateY(6px) scale(0);
 		}
 	}
 	input:checked + label:before{
 		border: 1px solid transparent;
-		box-shadow: inset 0 0 0 10px color("primary","darken-1");
+		background-color: color("grey", "lighten-1");
+		box-shadow: 1px 1px 1px color("grey", "base") inset;
 	}
-	label:before{
-		border-radius:50%;
-	}
-	input:not(:disabled) + label:hover:after,
-	input:checked + label:after{
+	input:checked + label:after {
 		content:'';
 		position:absolute;
 		width: 8px;
 		height: 8px;
-		transform:translateX(6px) translateY(6px);
+		transform:translateX(6px) translateY(6px) scale(1);
 		background-color: #fff;
-		border-radius: 100%;
-	}
-	& + label:hover:after{
-		color: color("primary","lighten-4");
-	}
-	input:checked + label:after,
-	input:checked + label:hover:after{
-		color:#fff;
 	}
 	input:disabled + label {
 		opacity:0.3;
-		cursor:default;
+		cursor: not-allowed;
 		&:before {
 		}
 	}
