--- a/src/css/molecule/_card.scss
+++ b/src/css/molecule/_card.scss
@@ -10,51 +10,78 @@
 	markup:
     <label>Simple</label>
     <div class="card">
+      <div class="progress -small">
+        <div class="bar"></div>
+      </div>
       <p>The saddest aspect of life right now is that science gathers knowledge faster than society gathers wisdom.</p>
     </div>
-    <label>With -line-primary</label>
-    <div class="card -line-primary">
-      <p>The saddest aspect of life right now is that science gathers knowledge faster than society gathers wisdom.</p>
-    </div>
-    <label>With -primary</label>
+    <label>With color</label>
     <div class="card -primary">
+      <header class="header">
+        <h5>Header Title</h5>
+      </header>
       <p>The saddest aspect of life right now is that science gathers knowledge faster than society gathers wisdom.</p>
+      <footer class="footer merge -large -horizontal">
+        <button class="button">Accept</button>
+        <button class="button">Decline</button>
+      </footer>
     </div>
+
 ––––
 */
 
 .card {
-  padding:10px 15px;
   border: 1px solid color("grey", "lighten-2");
   border-radius:3px;
   font-family: $nav-font;
 	box-shadow: 0px 1px 1px -1px #8C9DA1;
   margin-bottom:$text-size;
   position:relative;
+  opacity: 1;
+  transition: opacity 200ms ease;
   p {
     margin:0;
     color: inherit;
+    padding:10px 15px;
   }
+  h1,h2,h3,h4,h5,h6 {
+    font-weight: bold;
+  }
+  .progress {
+    margin:0;
+  }
+  .header {
+    border-bottom: 1px solid color("grey", "lighten-3");
+    padding:10px 15px;
+    position:relative;
+    //margin-bottom: $text-size;
+    h1,h2,h3,h4,h5,h6 {
+      margin: 0;
+    }
+    button {
+      margin: 0;
+    }
+  }
+
+  .footer {
+    border-top: 1px solid color("grey", "lighten-3");
+    padding:15px 15px;
+    //margin-top: $text-size;
+    h1,h2,h3,h4,h5,h6 {
+      margin: 0;
+    }
+    button {
+      margin: 0;
+    }
+  }
+
   @each $color_name, $color in $colors {
 
 		&.-#{$color_name} {
-			background-color:color(#{$color_name}, "base");
-			color:white;
-			border: 1px solid darken(color(#{$color_name}, "base"), 2%);
-      box-shadow: none;
+      box-shadow: 0 -2px 0 0 darken(color(#{$color_name}, "base"), 2%);
 	  }
 
-		&.-line-#{$color_name} {
-			background-color: rgba(color(#{$color_name}, "lighten-5"), 0.2)!important;
-			color: color(#{$color_name}, "base");
-			border: 1px solid rgba(color(#{$color_name}, "lighten-3"), 0.3);
-		}
-
 	}
-  &.loading {
-    p {
-      visibility: hidden;
-    }
-  }
+
 
 }
