--- a/src/css/molecule/_list.scss
+++ b/src/css/molecule/_list.scss
@@ -8,6 +8,25 @@
 		La List est une plante qui se mange froide
 
 	markup:
+    <label>Unordered</input>
+    <ul class="ul">
+      <li>Unordered lists have basic styles</li>
+      <li>They use the circle list style</li>
+      <ul>
+        <li>Nested lists styled to feel right</li>
+        <li>Can nest either type of list into the other</li>
+      </ul>
+    </ul>
+    <label>Ordered</input>
+    <ol class="ol">
+      <li>Ordered lists also have basic styles</li>
+      <li>They use the decimal list style</li>
+      <ol>
+        <li>Ordered and unordered can be nested</li>
+        <li>Can nest either type of list into the other</li>
+      </ol>
+      <li>Last list item just for the fun</li>
+    </ol>
     <label>Simple</label>
     <ul class="list">
       <li class="item touch">
@@ -36,6 +55,10 @@
               <i class="icon -sun"></i>
               <span>Thibaud</span>
             </div>
+						<div class="tag">
+              <i class="icon -sun"></i>
+              <span>Anthony</span>
+            </div>
           </div>
         </div>
       </li>
@@ -49,8 +72,33 @@
         </div>
       </li>
     </ul>
+
 ––––
 */
+
+
+ul, ol { list-style-type: none; }
+
+ul {
+	margin-top: $text-size;
+	margin-bottom: $text-size;
+	ul {
+		margin-top: 0;
+		margin-bottom: 0;
+	}
+}
+
+li {
+	margin-bottom: $text-size / 2;
+}
+
+ul.ul 				{ padding-left:20px; list-style-type: circle; }
+ul.ul ul 			{ padding-left:20px; list-style-type: disc; }
+ul.ul ul ul 		{ padding-left:20px; list-style-type: square; }
+
+ol.ol 				{ padding-left:20px; list-style-type: decimal; }
+ol.ol ol 			{ padding-left:20px; list-style-type: lower-alpha; }
+ol.ol ol ol 		{ padding-left:20px; list-style-type: lower-greek; }
 
 .list {
   width:100%;
@@ -64,6 +112,8 @@
   	position:relative;
   	-webkit-user-select: none;
   	font-family: $nav-font;
+    opacity: 1;
+    transition: opacity 200ms ease;
 
     &:not(:last-child) {
       border-bottom:1px solid color("grey", "lighten-2");
@@ -74,8 +124,8 @@
 
     .head {
       position:absolute;
-      width:40px;
-      height:40px;
+      width:45px;
+      height:45px;
       margin-right:$text-size;
       opacity:0.8;
       font-size: 2rem;
@@ -84,7 +134,7 @@
       }
     }
     i.head {
-      padding:10px;
+      padding:13px;
     }
 
     .content {
@@ -97,12 +147,14 @@
           font-weight: bold;
         }
         .desc {
-          margin-bottom: -9px;
           margin-bottom: 0;
+					.tag {
+						margin-bottom:0;
+					}
         }
-        .text {
-
-        }
+				p.desc {
+					margin-top:-6px;
+				}
     }
     &.-headless .content {
       margin-left:0px;
@@ -111,11 +163,6 @@
       position:absolute;
       top:0;
       right:0;
-    }
-    &.loading {
-      .content, .head {
-        visibility: hidden;
-      }
     }
   }
   .action {
@@ -134,9 +181,5 @@
       }
     }
 	}
-  &.loading {
-    .item {
-      visibility: hidden;
-    }
-  }
+
 }
