--- a/src/css/template/_color.scss
+++ b/src/css/template/_color.scss
@@ -1,4 +1,9 @@
 
+$hoverTimeIn: 350ms;
+$hoverTimeOut: 300ms;
+
+$hoverEaseIn: ease-out;
+$hoverEaseOut: ease-in;
 
 
 .color {
@@ -38,12 +43,12 @@
 		flex-direction: row;
 		height: 20px;
 		position: absolute;
-		transition: height 350ms ease;
+		transition: height $hoverTimeIn ease-in;
 		width: 100%;
 
 		>div {
 			height: 20px;
-			transition: height 350ms ease, width 350ms 200ms ease;
+			transition: height $hoverTimeIn ease-in, width $hoverTimeIn 200ms ease;
 			width: 16.6666%;
 
 			&:hover {
@@ -56,7 +61,7 @@
 		bottom: 20px;
 		padding: 20px 20px 14px;
 		position: absolute;
-		transition: bottom 350ms ease;
+		transition: bottom $hoverTimeIn ease-in;
 
 		h3 {
 			margin-top: 0;
@@ -87,7 +92,6 @@
 			margin-top: 0;
 			opacity: .8;
 			text-transform: uppercase;
-			transition: all 300ms ease-in;
 			font-size: $text-size;
 			font-weight: 400;
 		}
@@ -96,11 +100,16 @@
 	&:hover {
 
 		.variation {
+			transition-timing-function: ease-out;
+			transition-duration: $hoverTimeOut;
 			bottom: 100px;
 		}
 		.gradient {
 			height: 100px;
+			transition-timing-function: ease-out;
+			transition-duration: $hoverTimeOut;
 			>div {
+				transition: height $hoverTimeOut ease-out, width $hoverTimeOut 200ms ease;
 				height: 100px;
 			}
 		}
@@ -128,6 +137,15 @@
 
 		&:last-child {
 			margin-right: 0;
+		}
+		&:hover .gradient {
+			height: 100%;
+			transition-timing-function: ease-out;
+			transition-duration: $hoverTimeIn;
+			>div {
+				transition: height $hoverTimeIn ease-out, width $hoverTimeIn 200ms ease;
+				height: 100%;
+			}
 		}
 	}
 }
