--- a/src/css/template/_footer.scss
+++ b/src/css/template/_footer.scss
@@ -27,8 +27,9 @@
 }
 
 .footer {
-  border-top: 1px solid color("grey", "lighten-3");
+  padding: 20px;
   h5 {
+    text-align: center;
     margin:0;
   }
   i {
