--- a/src/css/template/_section.scss
+++ b/src/css/template/_section.scss
@@ -40,26 +40,56 @@
 			margin-top: $text-size / 2;
 		}
 
-		>div {
+		.two-cols-verticaly-aligned {
+			min-height:600px;
+		}
+		.sample {
+			padding: 0px 24px 0px 0px;
+		}
 
-			.two-cols-verticaly-aligned {
-
-				>div:nth-child(1) {
-					padding: 24px 24px 78px 0px;
+		.sample-code {
+			padding: 0px 0px 0px 24px;
+			position: relative;
+			&>header {
+				position: absolute;
+				top:0;
+				left:25px;
+				width: calc(100% - 25px);
+				opacity:0;
+				background: linear-gradient(to bottom,rgba(0, 0, 0, .03),rgba(0, 0, 0, 0) 100%);
+				transition: all 200ms ease;
+				.desc {
+					font-size: 1.3rem;
+					text-transform: uppercase;
+					color: color("grey", "darken-3");
+					font-weight: 400;
+					float:right;
+					margin: 0;
+					margin-right:10px;
+					line-height: 40px;
 				}
-
-				>div:nth-child(2) {
-					padding: 0 0 0 24px;
-
-					code {
-						box-shadow: none;
-						border-radius: 0;
-						border-left: 1px solid color('grey', 'lighten-3');
-						padding: 9rem 2.5rem;
+				.copy {
+					margin: 0;
+					.button {
 						margin:0;
 					}
 				}
 			}
+			code {
+				padding: 0 0 0 24px;
+				box-shadow: none;
+				border-radius: 0;
+				border-left: 1px solid color('grey', 'lighten-3');
+				padding: 9rem 2.5rem;
+				margin: 0;
+				min-height:600px;
+			}
+		}
+		&:hover {
+			& .sample-code>header {
+				opacity:1;
+			}
 		}
 	}
+
 }
