--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -135,6 +135,73 @@
 
 		.unselectable 	{ user-select: none; }
 
+		/* # Icons
+		–––––––––––––––––––––––––––––––––––––––––––––––––– */
+		
+		@include include-font("../fonts/icomoon/", "icomoon");
+
+		@keyframes spin {
+		  0% {
+		    transform: rotate(0deg);
+		  }
+
+		  100% {
+		    transform: rotate(359deg);
+		  }
+		}
+
+		@keyframes flip {
+		  0% {
+		      transform: rotate(0deg);
+		  }
+		  15% {
+		      transform: rotate(-25deg);
+		  }
+		  70% {
+		      transform: rotate(195deg);
+		  }
+		  85% {
+		      transform: rotate(173deg);
+		  }
+		  100% {
+		      transform: rotate(180deg);
+		  }
+		}
+
+		.flag, .social {
+		  margin-right:$text-size / 2;
+		  margin-bottom: $text-size;
+		  width: 30px;
+		  height:20px;
+		  border-radius:2px;
+		  display:inline-block;
+		  background-size: cover;
+		  &.-x2 { width: $text-size * 3; height: (($text-size * 3) / 3) * 2; }
+		  &.-x3 { width: $text-size * 4; height: (($text-size * 4) / 3) * 2; border-radius:5px; }
+		  &.-x4 { width: $text-size * 5; height: (($text-size * 5) / 3) * 2; border-radius:5px; }
+		  &.-x5 { width: $text-size * 6; height: (($text-size * 6) / 3) * 2; border-radius:5px; }
+		}
+
+		.icon {
+		    /* use !important to prevent issues with browser extensions that change fonts */
+		    font-family: 'icomoon' !important;
+		    speak: none;
+		    font-style: normal;
+		    font-weight: normal;
+		    font-variant: normal;
+		    text-transform: none;
+		    line-height: 1;
+		    text-rendering: geometricPrecision;
+		    font-size: $text-size;
+
+		    &.-x2 { font-size: $text-size * 2; }
+		    &.-x3 { font-size: $text-size * 3; }
+		    &.-x4 { font-size: $text-size * 4; }
+		    &.-x5 { font-size: $text-size * 5; }
+		    &.-spin { animation: spin 0.8s infinite linear; display: inline-block; }
+
+		}
+
 		/* # Baseline
 		–––––––––––––––––––––––––––––––––––––––––––––––––– */
 
