--- a/src/css/atom/_tag.scss
+++ b/src/css/atom/_tag.scss
@@ -146,7 +146,6 @@
 	}
 
 	&.-pointing {
-		animation: fade-in 200ms ease;
 		&:before {
 			content: "";
 			color: #FFF;
@@ -169,12 +168,16 @@
 			top: calc(50% - 6px);
 			left: -6px;
 			transform: rotate(-45deg);
+      animation: fade-in 200ms ease;
 		}
 		&.-right:before  {
 			top: calc(50% - 5px);
 			left: calc(100% - 5px);
 			transform: rotate(135deg);
 		}
+    span {
+      z-index: 1;
+    }
 	}
 
 	@each $color_name, $color in $colors {
