--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -14,7 +14,6 @@
 @import "color";
 @import "base";
 
-@import "atom/icon";
 @import "atom/button";
 @import "atom/input";
 @import "atom/blockquote";
@@ -61,6 +60,7 @@
 @import "template/footer";
 @import "template/color";
 @import "template/typo";
+@import "template/symbol";
 
 // background-image:  url('data:image/svg+xml;utf8,<svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><circle opacity="0.5" fill="#555" cx="28.75" cy="22.338" r="0.713"/><circle opacity="0.2" fill="#555" cx="26.75" cy="79.443" r="0.307"/><circle opacity="0.5" fill="#555" cx="50" cy="41.884" r="0.308"/><circle fill="#555" cx="12.883" cy="42.25" r="0.367"/><circle opacity="0.4" fill="#555" cx="80" cy="72.818" r="0.307"/><circle opacity="0.5" fill="#555" cx="55.625" cy="12.375" r="0.308"/><circle opacity="0.2" fill="#555" cx="73.307" cy="89.375" r="0.308"/><circle opacity="0.5" fill="#555" cx="73" cy="53.884" r="0.308"/><circle opacity="0.5" fill="#555" cx="38.875" cy="89.432" r="0.385"/></svg>');
 // background-size: 20rem 20rem;
