--- a/src/css/template/conseil-emploi/_landing.scss
+++ b/src/css/template/conseil-emploi/_landing.scss
@@ -25,7 +25,7 @@
       position:absolute;
       background-repeat: no-repeat;
       bottom:0px;
-      background-image: url('data:image/svg+xml;utf8,<svg id="svg4256" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" height="83" viewBox="0 0 1440 83.000002" width="1440" version="1.1" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/"><g id="layer1" transform="translate(0 -969.36)"><path fill="#{color("grey", "lighten-5")}" id="path4718" d="m-0.8933 1004.1v49.132h1441.4v-49.132h-674.33l-46.452 46.452-46.452-46.452z" fill-rule="evenodd"/></g></svg>');
+      background-image: url('data:image/svg+xml;utf8,<svg xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" height="83" viewBox="0 0 2880 83.000002" width="2880" version="1.1" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/"><g transform="translate(0,-969.36)"><path d="m-0.8933 1004.1v49.132h2885v-49.132h-1400.1l-46.452 46.452-46.452-46.452z" fill-rule="evenodd" fill="#{color("grey","lighten-5")}"/></g></svg>');
       background-position: center;
     }
   }
