--- a/src/css/template/conseil-emploi/_form.scss
+++ b/src/css/template/conseil-emploi/_form.scss
@@ -1,5 +1,5 @@
 
-#form {
+#form, #addJobFormWrapper {
   width: 100%;
   min-height:100%;
   padding-top: 110px;
@@ -52,26 +52,76 @@
 }
 
 #job-list {
+  position: relative;
+  .new {
+    background-color: transparent!important;
+    box-shadow: none;
+    border: none;
+    .item {
+      border: 1px dashed color("grey", "lighten-1");
+      background-color: transparent!important;
+      cursor:pointer;
+      transition: all 200ms ease;
+      &:hover {
+        border: 1px dashed color("primary", "lighten-5");
+      }
+    }
+  }
   .list .item {
     padding: 1rem 1.5rem;
-    &.-active {
-      span {
-        font-weight: 600;
-      }
+    display:block;
+    span {
+      display:inline-block;
+      width: 75%;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      height: 25px;
+      transition: width 200ms ease("swift-in");
     }
     i {
       float:right;
       cursor: pointer;
       opacity: 0;
       line-height: 1.6;
+      transition: all 250ms ease("swift-in");
+      transform: scale(0.5);
+      &:not(:first-of-type) {
+        margin-right: 10px;
+        //transition: all 250ms 50ms ease("swift-in");
+      }
     }
-    &:hover i {
-      opacity: 1;
+    &:hover  {
+      span {
+        width: 70%;
+      }
+      i {
+        opacity: 1;
+        transform: scale(1);
+      }
+    }
+    &.-active {
+      span {
+        width: 90%;
+        font-weight: 600;
+      }
     }
   }
   .button {
     margin-top: 10px;
     margin-bottom: 0;
+  }
+  label button {
+    position: absolute;
+    right:0;
+    padding:3px!important;
+    margin:0!important;
+    width: 30px;
+
+    height: 30px;
+    i {
+      margin: 0;
+    }
   }
 }
 
